fixed spacing @desktop for shows page header/soundcloud

--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -41,6 +41,7 @@
   @include desktop {
     display: flex;
     padding-top: 7.5rem;
+    justify-content: space-around;
   }
 }
 
